5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4428/executions/1582_1333.log
== TEST (2019-03-26 00:10:10) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:18:11) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(8//9)
print(expressao)
-- OUTPUT:
0
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:19:10) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(8//9, ndigits=2)
print(expressao)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print(8//9, ndigits=2)
TypeError: 'ndigits' is an invalid keyword argument for this function
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:19:35) 
-- CODE:
expressao = 30-3**2+8//3**2*10
print(8//3**2)
print(expressao)
-- OUTPUT:
0
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:23:34) 
-- CODE:
expressao = 30-(3**2)+8//(3**2)*10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:25:06) 
-- CODE:
expressao = (30-3**2)+(8//3**2)*10
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:25:42) 
-- CODE:
expressao = 30-(3**2)+8//(3**2*10)
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:29:08) 
-- CODE:
expressao = 30-(3**2)+((8//(3**2)*10)
print(expressao)
-- ERROR:
File "XXXX", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:31:02) 
-- CODE:
expressao = 30-(3**2)+((8//(3**2))*10)
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:32:47) 
-- CODE:
expressao = 30-(3**2)+((8//(3**2))*10)
print (8//(3**2))
print(expressao)
-- OUTPUT:
0
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:33:27) 
-- CODE:
expressao = 30-(3**2)+((8//(3**2))*10)
print (8/(3**2))
print(expressao)
-- OUTPUT:
0.8888888888888888
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:33:39) 
-- CODE:
expressao = 30-(3**2)+((8/(3**2))*10)
print (8/(3**2))
print(expressao)
-- OUTPUT:
0.8888888888888888
29.88888888888889
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:35:39) 
-- CODE:
expressao = 30-(3**2)+((8//(3**2)8%3**2)*10)
print (8/(3**2))
print(expressao)
-- ERROR:
File "XXXX", line 1
    expressao = 30-(3**2)+((8//(3**2)8%3**2)*10)
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:36:16) 
-- CODE:
expressao = 30-(3**2)+((8//(3**2)(8%3**2)*10)
print (8/(3**2))
print(expressao)
-- ERROR:
File "XXXX", line 2
    print (8/(3**2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:36:53) 
-- CODE:
expressao = 30-(3**2)+((8//(3**2)*10)
print(expressao)
-- ERROR:
File "XXXX", line 2
    print(expressao)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 00:37:20) 
-- CODE:
expressao = 30-(3**2)+((8//(3**2))*10)
print(expressao)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 00:38:22) 
-- CODE:
expressao = 30-(3**2)+((8//(3**2))*10)
print(expressao)
-- EXECUTION TIME:
0.20275
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
